# sailing

./: .coverage  .coverage.MacBook-Air-2.local.1550.XsGbBFUx  .coverage.MacBook-Air-2.local.1554.XmPAXqMx  .coverage.MacBook-Air-2.local.1623.XhHKgIzx  .coverage.MacBook-Air-2.local.24366.XUfYSPcx  .coveragerc  .editorconfig  .env  .gitignore  LICENSE  README.md  README_DEPLOY.md  \  add_encoding_declaration.py  anomaly_test.py  better_syntax_fix.py  check_binary_content.py  check_complex_search.py  check_encoding.py  check_encoding_issues.py  check_errors.py  check_f_strings.py  check_file.py  check_imports.py  check_syntax.py  check_tests.py  clean_encoding_once_for_all.py  clean_fix.py  clean_null_bytes.py  clean_test_files.py  cleanup.sh  convert_fstrings.py  convert_to_ascii.py  core_modified.py  create_simplified_tests.py  debug_cache.py  debug_cache_detailed.py  debug_core_analyzer_test.py  debug_import_test.py  debug_parse_issue.py  (+133 more)
.streamlit/: config.toml
analysis/: improved_tack_detection_test.py  tack_detection_test.py  wind_estimator_analysis.py  wind_propagation_test.py
archive/: README.md  sailing_analyzer_app.py  sailing_analyzer_app_v2.py
backend/: .env.example  ENVIRONMENT_SETUP.md  IMPLEMENTATION_REPORT.md  create_dirs.sh  fix_encoding.py  main.py  requirements.txt  restructure_project.py  test_supabase.py
bak_before_fix/: image_exporter.py
benchmark_results/: anomaly_benchmark.json  data_processing_benchmark.json  my_wind_estimation_benchmark.json  strategy_benchmark.json  wind_estimation_benchmark.json  wind_estimation_performance.json  wind_field_benchmark.json
deployment/: streamlit_cloud_deploy.md
docs/: README.md  data_model_optimization.md  deploy-checklist.md  deployment.md  deployment_checklist.md  future_work.md  import_wizard_guide.md  project_summary.md  report_template_system_implementation.md  session_management_extension_report.md  sharing_feature_implementation_report.md  ui_component_implementation_guide.md  ui_component_library.md  ui_design_guidelines.md  user_guide.md  validation_feedback_technical.md  validation_feedback_user_guide.md
examples/: optimized_sailing_analysis.py
frontend/: .env.example  .env.template  .eslintrc.json  .vercelignore  README.md  cypress.config.js  jest.config.js  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vercel.json  vercel.json.bak
patches/: apply_normalize_timestamp_patch.py  fix_file_encoding.py  fix_sample_csv_timestamps.py  (+4 more)
ui/: app.py  (+36 more)
(+806 files in other folders)
